src/objects/EBC_Template_Resource__c.object
<CustomObject>
    <description>Relations betweeen the templates and the resources</description>
    <fields>
        <fullName>EBC_Resource__c</fullName>
        <description>The related resource</description>
        <inlineHelpText>The related resource</inlineHelpText>
        <label>EBC Resource</label>
        <referenceTo>EBC_Resource__c</referenceTo>
        <relationshipLabel>EBC Template Resources</relationshipLabel>
        <relationshipName>EBC_Template_Resources</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EBC_Template__c</fullName>
        <description>The related template</description>
        <inlineHelpText>The related template</inlineHelpText>
        <label>EBC Template</label>
        <referenceTo>EBC_Template__c</referenceTo>
        <relationshipLabel>EBC Template Resources</relationshipLabel>
        <relationshipName>EBC_Template_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is image uploaded on Mosiaico</description>
        <inlineHelpText>Is image uploaded on Mosiaico</inlineHelpText>
        <label>Is Ready</label>
        <type>Checkbox</type>
    </fields>
    <label>EBC Template Resource</label>
    <nameField>
        <label>EBC Template Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBC Template Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>